--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
         <script src="assets/scripts/modernizr-2.7.1-development.min.js"></script>
     </head>
     <body>
+		<div class="preload">
+			<img src="assets/images/tea.jpg"></img>
+			<img src="assets/images/camera.jpg"></img>
+			<img src="assets/images/train.jpg"></img>
+			<img src="assets/images/birds.jpg"></img>
+		</div>
         <!--[if lt IE 7]>
             <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
         <![endif]-->
