--- a/index.html
+++ b/index.html
@@ -44,20 +44,69 @@
 				<!-- .mask -->
 				<div class="mask">				
 					<ul>
-						<li  class="slider__item  slider--main  animate--first js-at-bat"  style="background-image: url('assets/images/camera.jpg')">
-							<a href="#imagegray">
+						<li  class="slider__item  slider--main  animate--first js-at-bat">
+							<a href="#camera">
+								<div class="block-image">
+									<div class="background-image" style="background-image: url('assets/images/camera.jpg')"></div>
+								</div>
+								<div class="article-details">
+									<a href="#camera">
+										<h3>This is an article title</h3>
+									</a>
+									<div class="sub-details">
+										<a href="#camera-author"  class="author">I am an author</a>
+										<span class="subheading">National</span>
+									</div>
+								</div>
 							</a>
 						</li>
-						<li  class="slider__item  slider--second  animate--second  js-on-deck"  style="background-image: url('assets/images/birds.jpg')">
-							<a href="#imagesports">
+						<li  class="slider__item  slider--second  animate--second  js-on-deck">
+							<a href="#birds">
+								<div class="block-image">
+									<div class="background-image" style="background-image: url('assets/images/birds.jpg')"></div>
+								</div>
+								<div class="article-details">
+									<a href="#birds">
+										<h3>This is an article title</h3>
+									</a>
+									<div class="sub-details">
+										<a href="#birds-author"  class="author">I am an author</a>
+										<span class="subheading">City</span>
+									</div>
+								</div>
+							</a>
+
+						</li>
+						<li  class="slider__item  slider--next  animate--third js-in-the-hole">
+							<a href="#train">
+								<div class="block-image">
+									<div class="background-image" style="background-image: url('assets/images/train.jpg')"></div>
+								</div>
+								<div class="article-details">
+									<a href="#train">
+										<h3>This is an article title</h3>
+									</a>
+									<div class="sub-details">
+										<a href="#train-author"  class="author">I am an author</a>
+										<span class="subheading">National</span>
+									</div>
+								</div>
 							</a>
 						</li>
-						<li  class="slider__item  slider--next  animate--third js-in-the-hole"  style="background-image: url('assets/images/train.jpg')">
-							<a href="#imagepuppy">
-							</a>
-						</li>
-						<li  class="slider__item  slider--last  animate--fourth js-last-up"  style="background-image: url('assets/images/tea.jpg')">
-							<a href="#imagekitten">
+						<li  class="slider__item  slider--last  animate--fourth js-last-up">
+							<a href="#tea">
+								<div class="block-image">
+									<div class="background-image" style="background-image: url('assets/images/tea.jpg')"></div>
+								</div>
+								<div class="article-details">
+									<a href="#tea">
+										<h3>This is an article title</h3>
+									</a>
+									<div class="sub-details">
+										<a href="#tea-author"  class="author">I am an author</a>
+										<span class="subheading">Regional</span>
+									</div>
+								</div>
 							</a>
 						</li>
 					</ul>	
