Override of files
Works :)

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<!-- <link rel="prerender" href="http://ref-to-the-page"> -->
 		
 		
-        <title></title>
+        <title>Cru Slider</title>
         
 		<meta name="description" content="">
         <meta name="viewport" content="width=device-width">
@@ -29,10 +29,10 @@
     </head>
     <body>
 		<div class="preload">
-			<img src="assets/images/tea.jpg"></img>
-			<img src="assets/images/camera.jpg"></img>
-			<img src="assets/images/train.jpg"></img>
-			<img src="assets/images/birds.jpg"></img>
+			<img src="assets/images/cru640x360_story_01.jpg"></img>
+			<img src="assets/images/cru640x360_story_02.jpg"></img>
+			<img src="assets/images/cru640x360_story_03.jpg"></img>
+			<img src="assets/images/cru640x360_story_04.jpg"></img>
 		</div>
         <!--[if lt IE 7]>
             <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
@@ -47,11 +47,11 @@
 						<li  class="slider__item  slider--main  animate--first js-at-bat">
 							<a href="#camera">
 								<div class="block-image">
-									<div class="background-image" style="background-image: url('assets/images/camera.jpg')"></div>
+									<div class="background-image" style="background-image: url('assets/images/cru640x360_story_01.jpg')"></div>
 								</div>
 								<div class="article-details">
 									<a href="#camera">
-										<h3>This is an article title</h3>
+										<h3>6 Things Every Christian Should Do Super Bowl Weekend</h3>
 									</a>
 									<div class="sub-details">
 										<a href="#camera-author"  class="author">I am an author</a>
@@ -63,11 +63,11 @@
 						<li  class="slider__item  slider--second  animate--second  js-on-deck">
 							<a href="#birds">
 								<div class="block-image">
-									<div class="background-image" style="background-image: url('assets/images/birds.jpg')"></div>
+									<div class="background-image" style="background-image: url('assets/images/cru640x360_story_02.jpg')"></div>
 								</div>
 								<div class="article-details">
 									<a href="#birds">
-										<h3>This is an article title</h3>
+										<h3>Emma Had a Burden of Guilt and a Masking Smile</h3>
 									</a>
 									<div class="sub-details">
 										<a href="#birds-author"  class="author">I am an author</a>
@@ -80,11 +80,11 @@
 						<li  class="slider__item  slider--next  animate--third js-in-the-hole">
 							<a href="#train">
 								<div class="block-image">
-									<div class="background-image" style="background-image: url('assets/images/train.jpg')"></div>
+									<div class="background-image" style="background-image: url('assets/images/cru640x360_story_03.jpg')"></div>
 								</div>
 								<div class="article-details">
 									<a href="#train">
-										<h3>This is an article title</h3>
+										<h3>Pre-cancer Susie's Journey of Doubt Before a Brain Tumor</h3>
 									</a>
 									<div class="sub-details">
 										<a href="#train-author"  class="author">I am an author</a>
@@ -96,11 +96,11 @@
 						<li  class="slider__item  slider--last  animate--fourth js-last-up">
 							<a href="#tea">
 								<div class="block-image">
-									<div class="background-image" style="background-image: url('assets/images/tea.jpg')"></div>
+									<div class="background-image" style="background-image: url('assets/images/cru640x360_story_04.jpg')"></div>
 								</div>
 								<div class="article-details">
 									<a href="#tea">
-										<h3>This is an article title</h3>
+										<h3>Yes, It's Possible to Have a Long-Distance Ministry</h3>
 									</a>
 									<div class="sub-details">
 										<a href="#tea-author"  class="author">I am an author</a>
@@ -127,7 +127,7 @@
 			</a>
 		</div>
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="assets/scripts/jquery-1.10.1.min.js"><\/script>')</script>
 
         <script src="js/plugins.js"></script>
